# kodelet-python-sdk

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/review/: extension.py  kodelet-extension-review  reviewer-prompt.md
examples/sdk/: README.md  basic-agent-session  inline-extension-session  streaming-agent-session
examples/workspace/: extension.py  kodelet-extension-workspace
src/kodelet_sdk/: __init__.py  _utils.py  agent.py  api.py  context.py  runtime.py  schemas.py  template.py  test_harness.py
src/kodelet_sdk/agent/: __init__.py  bridge.py  client.py  rpc.py  session.py  transport.py  types.py
tests/: test_agent.py  test_api.py  test_examples.py
tests/fixtures/: workspace_policy_extension.py
