[project]
name = "kodelet-sdk"
dynamic = ["version"]
description = "Python SDK for authoring Kodelet extensions"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Kodelet" }]
dependencies = [
  "jinja2>=3.1,<4",
  "pydantic>=2.0,<3",
]

[project.urls]
Repository = "https://github.com/jingkaihe/kodelet"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION.txt"
pattern = "^(?P<version>[^\\s]+)$"

[tool.hatch.build.targets.wheel]
packages = ["src/kodelet_sdk"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "hatchling>=1.27",
  "ruff>=0.14.0",
  "ty>=0.0.1a21",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.11"
root = ["src", "tests"]
